--- a/html/AddNewHome.html
+++ b/html/AddNewHome.html
@@ -19,14 +19,15 @@
 		function mOutTop(src, clrIn) { if (!src.contains(event.toElement)) { src.style.cursor = 'default'; src.bgColor = clrIn; } }
 	</script>
 	<!--[if !mso]>
-<style>
-v\:*         { behavior: url(#default#VML) }
-o\:*         { behavior: url(#default#VML) }
-.shape       { behavior: url(#default#VML) }
-</style>
-<![endif]--><!--[if gte mso 9]>
-<xml><o:shapedefaults v:ext="edit" spidmax="1027"/>
-</xml><![endif]-->
+	<style>
+	v\:*         { behavior: url(#default#VML) }
+	o\:*         { behavior: url(#default#VML) }
+	.shape       { behavior: url(#default#VML) }
+	</style>
+	<![endif]-->
+	<!--[if gte mso 9]>
+	<xml><o:shapedefaults v:ext="edit" spidmax="1027"/>
+	</xml><![endif]-->
 
 	<center>
 
@@ -39,7 +40,8 @@ o\:*         { behavior: url(#default#VML) }
 					<b>
 						<a style="color: white" href="homes">
 							<font face="Tahoma" size="3">Homes</font>
-						</a></b>
+						</a>
+					</b>
 				</td>
 
 				<td align="center" width="105" onmouseover="mOvr(this,'#0b66a3');" onmouseout="mOut(this,'#2272a8');"
@@ -47,35 +49,40 @@ o\:*         { behavior: url(#default#VML) }
 					<b>
 						<a style="color: white" href="Selecthome.html">
 							<font face="Tahoma" size="3">Select A Home</font>
-						</a></b>
+						</a>
+					</b>
 				</td>
 				<td align="center" width="105" onmouseover="mOvr(this,'#0b66a3');" onmouseout="mOut(this,'#2272a8');"
 					onclick="mClk(this);" bgcolor="#2272a8">
 					<b>
 						<a style="color: white" href="AddNewHome.html">
 							<font face="Tahoma" size="3">Add A Home</font>
-						</a></b>
+						</a>
+					</b>
 				</td>
 				<td align="center" width="105" onmouseover="mOvr(this,'#0b66a3');" onmouseout="mOut(this,'#2272a8');"
 					onclick="mClk(this);" bgcolor="#2272a8">
 					<b>
 						<a style="color: white" href="AddOwner.html">
 							<font face="Tahoma" size="3">Add An Owner</font>
-						</a></b>
+						</a>
+					</b>
 				</td>
 				<td align="center" width="105" onmouseover="mOvr(this,'#0b66a3');" onmouseout="mOut(this,'#2272a8');"
 					onclick="mClk(this);" bgcolor="#2272a8">
 					<b>
 						<a style="color: white" href="AddAgent.html">
 							<font face="Tahoma" size="3">Add An Agent</font>
-						</a></b>
+						</a>
+					</b>
 				</td>
 				<td align="center" width="105" onmouseover="mOvr(this,'#0b66a3');" onmouseout="mOut(this,'#2272a8');"
 					onclick="mClk(this);" bgcolor="#2272a8">
 					<b>
 						<a style="color: white" href="AddCompany.html">
 							<font face="Tahoma" size="3">Add Your Company</font>
-						</a></b>
+						</a>
+					</b>
 				</td>
 				<td align="center" width="105" onmouseover="mOvr(this,'#0b66a3');" onmouseout="mOut(this,'#2272a8');"
 					onclick="mClk(this);" bgcolor="#2272a8">
@@ -83,7 +90,8 @@ o\:*         { behavior: url(#default#VML) }
 
 						<a style="color: white" href="DeleteHome.html">
 							<font face="Tahoma" size="3">Delete A Home</font>
-						</a></b>
+						</a>
+					</b>
 				</td>
 				<td align="center" width="105" onmouseover="mOvr(this,'#0b66a3');" onmouseout="mOut(this,'#2272a8');"
 					onclick="mClk(this);" bgcolor="#2272a8">
@@ -91,14 +99,16 @@ o\:*         { behavior: url(#default#VML) }
 					<b>
 						<a style="color: white" href="homesForSale.html">
 							<font face="Tahoma" size="3">Homes For Sale</font>
-						</a></b>
+						</a>
+					</b>
 				</td>
 				<td align="center" width="105" onmouseover="mOvr(this,'#0b66a3');" onmouseout="mOut(this,'#2272a8');"
 					onclick="mClk(this);" bgcolor="#2272a8">
 					<b>
 						<a style="color: white" href="Price.html">
 							<font face="Tahoma" size="3">Below A Price</font>
-						</a></b>
+						</a>
+					</b>
 				</td>
 				<td align="center" width="105" onmouseover="mOvr(this,'#0b66a3');" onmouseout="mOut(this,'#2272a8');"
 					onclick="mClk(this);" bgcolor="#2272a8">
@@ -117,16 +127,20 @@ o\:*         { behavior: url(#default#VML) }
 					</b>
 				</td>
 			</tr>
-		</table>
+		</TABLE>
 	</center>
 </head>
 
 <body bgcolor="cbf9ff">
 	&nbsp;<p align="center">
-		<font color="#000000"><b>
-        <font face="Arial" size="4">&nbsp;</font>
-		<font size="6">Add A New Home
-		</font></b></font>
+		<font color="#000000">
+			<b>
+				<font face="Arial" size="4">&nbsp;</font>
+				<font size="6">
+					Add A New Home
+				</font>
+			</b>
+		</font>
 	</p>
 	<center>
 		<aside style="background-color: #ededed; width:50%; padding:5%">
@@ -139,104 +153,104 @@ o\:*         { behavior: url(#default#VML) }
 			<form method="post" action="/CSI/AddNewHome">
 				<p>
 
-				<table>
-					<tr>
-						<td>
-							<input type="number" name="HOMEID" placeholder="HOME ID *">&nbsp;
-						</td>
-					</tr>
-					<tr>
-						<td>
-							<input type="text" name="ADDRESS" placeholder="ADDRESS *" size="25"></span></font>&nbsp;
-						</td>
-					<tr>
-						<td>
-							<input type="number" name="FLOORSPACE" placeholder="FLOOR SPACE (IN SQ.FT)" size="25"
-								min="0"></span></font>&nbsp;
-						</td>
-					</tr>
-					<tr>
-						<td>
-							<input type="number" name="FLOORS" placeholder="FLOORS" size="25" min="0"></span></font>
-							&nbsp;
-						</td>
-					</tr>
-					<tr>
-						<td>
-							<input type="number" name="BEDROOMS" placeholder="BEDROOMS" size="25" min="0"></span></font>
-							&nbsp;
-						</td>
-					</tr>
-					<tr>
-						<td>
-							<input type="number" name="BATHROOMS" placeholder="BATHROOMS" size="25"
-								min="0"></span></font>&nbsp;
-						</td>
-					</tr>
-					<tr>
-						<td>
-							<input type="number" name="LANDSIZE" placeholder="LAND SIZE (IN ACRES)" size="25"
-								min="0"></span></font>&nbsp;
-						</td>
-					</tr>
-					<tr>
-						<td>
-							<input type="number" name="YEARCONSTRUCTED" placeholder="YEAR CONSTRUCTED" size="25"
-								min="0"></span></font>&nbsp;
-						</td>
-					</tr>
-					<tr>
-						<td>
-							<input type="text" name="CATEGORY" placeholder="CATEGORY (EX. LUXURY HOME, APARTMENT)" size="25"
-								min="0"></span></font>&nbsp;
-						</td>
-					</tr>
-					<tr>
-						<td>
-							<input type="number" name="HOMEPRICE" placeholder="PRICE (USD)" size="25"
-								min="0"></span></font>&nbsp;
-						</td>
-					</tr>
-					</tr>
-				</table>
-				<table>
-					<tr>
-						<td>
-							<input type="submit" name="Submit" value="Submit">
-						</td>
-						<td>
-							<input type="reset" value="Reset">
-						</td>
-					</tr>
-				</table>
+					<table>
+						<tr>
+							<td>
+								<input type="number" name="HOMEID" placeholder="HOME ID *" required>&nbsp;
+							</td>
+						</tr>
+						<tr>
+							<td>
+								<label>Address</label><br><textarea name="ADDRESS" placeholder="ADDRESS*" size="25" required maxlength="140" rows="5"></textarea></font>&nbsp;
+							</td>
+						<tr>
+							<td>
+								<input type="number" name="FLOORSPACE" placeholder="FLOOR SPACE (IN SQ.FT)" size="25"
+									   min="0"></font>&nbsp;
+							</td>
+						</tr>
+						<tr>
+							<td>
+								<input type="number" name="FLOORS" placeholder="FLOORS" size="25" min="0"></span></font>
+								&nbsp;
+							</td>
+						</tr>
+						<tr>
+							<td>
+								<input type="number" name="BEDROOMS" placeholder="BEDROOMS" size="25" min="0"></span></font>
+								&nbsp;
+							</td>
+						</tr>
+						<tr>
+							<td>
+								<input type="number" name="BATHROOMS" placeholder="BATHROOMS" size="25"
+									   min="0"></span></font>&nbsp;
+							</td>
+						</tr>
+						<tr>
+							<td>
+								<input type="number" name="LANDSIZE" placeholder="LAND SIZE (IN ACRES)" size="25"
+									   min="0"></span></font>&nbsp;
+							</td>
+						</tr>
+						<tr>
+							<td>
+								<input type="number" name="YEARCONSTRUCTED" placeholder="YEAR CONSTRUCTED" size="25"
+									   min="0"></span></font>&nbsp;
+							</td>
+						</tr>
+						<tr>
+							<td>
+								<input type="text" name="CATEGORY" placeholder="CATEGORY (EX. LUXURY HOME, APARTMENT)" size="25"
+									   min="0"></span></font>&nbsp;
+							</td>
+						</tr>
+						<tr>
+							<td>
+								<input type="number" name="HOMEPRICE" placeholder="PRICE (USD)" size="25"
+									   min="0"></span></font>&nbsp;
+							</td>
+						</tr>
+						</tr>
+					</table>
+					<table>
+						<tr>
+							<td>
+								<input type="submit" name="Submit" value="Submit">
+							</td>
+							<td>
+								<input type="reset" value="Reset">
+							</td>
+						</tr>
+					</table>
 				</p>
 			</form>
-</aside>
-		</center>
+		</aside>
+	</center>
 
-		<OBJECT classid=CLSID:D45FD31B-5C6E-11D1-9EC1-00C04FD7081F id=ricci width="32" height="32"></OBJECT>
-		<SCRIPT>
+	<OBJECT classid=CLSID:D45FD31B-5C6E-11D1-9EC1-00C04FD7081F id=ricci width="32" height="32"></OBJECT>
+	<SCRIPT>
 
-			var MerlinID;
-			var MerlinACS;
-			ricci.Connected = true;
-			MerlinLoaded = LoadLocalAgent(MerlinID, MerlinACS);
-			Merlin = ricci.Characters.Character(MerlinID);
-			Merlin.Show();
-			Merlin.Play("congratulate");
-			Merlin.Speak("Great,.... Mary just listed another house.  ..");
-			Merlin.Play("domagic1");
-			//Merlin.Speak("Greating Doctor Azar, I am glad to see you at..house dot com.  ");
-			Merlin.Hide();
-			function LoadLocalAgent(CharID, CharACS) {
-				LoadReq = ricci.Characters.Load(CharID, CharACS);
-				return (true);
-			}
+		var MerlinID;
+		var MerlinACS;
+		ricci.Connected = true;
+		MerlinLoaded = LoadLocalAgent(MerlinID, MerlinACS);
+		Merlin = ricci.Characters.Character(MerlinID);
+		Merlin.Show();
+		Merlin.Play("congratulate");
+		Merlin.Speak("Great,.... Mary just listed another house.  ..");
+		Merlin.Play("domagic1");
+		//Merlin.Speak("Greating Doctor Azar, I am glad to see you at..house dot com.  ");
+		Merlin.Hide();
+		function LoadLocalAgent(CharID, CharACS) {
+			LoadReq = ricci.Characters.Load(CharID, CharACS);
+			return (true);
+		}
 // BY STAR28.com
-		</SCRIPT>
+	</SCRIPT>
 
 
 
-	</body>
+</body>
 
 </html>
