--- a/html/ComputeLoan.html
+++ b/html/ComputeLoan.html
@@ -125,17 +125,17 @@ o\:*         { behavior: url(#default#VML) }
         <table>
           <tr>
             <td>
-              <input type="number" name="loanAmount" placeholder="Loan Amount" min="0">&nbsp;
+              <input type="number" name="loanAmount" placeholder="Loan Amount" min="0" maxlength="20">&nbsp;
             </td>
           </tr>
           <tr>
             <td>
-              <input type="number" name="annualInterestRate" placeholder="Annual Interest Rate">&nbsp;
+              <input type="number" name="annualInterestRate" placeholder="Annual Interest Rate" max="200">&nbsp;
             </td>
           </tr>
           <tr>
             <td>
-              <input type="number" name="numberOfYears" placeholder="Number of years" min="0">&nbsp;
+              <input type="number" name="numberOfYears" placeholder="Number of years" min="0" max="100">&nbsp;
             </td>
           </tr>
         </table>
