--- a/html/Price.html
+++ b/html/Price.html
@@ -132,7 +132,7 @@ o\:*         { behavior: url(#default#VML) }
 				<table>
 				  <tr>
 					 <td>
-						<input type = "number" name = "price" placeholder="Price" min="0">&nbsp;
+						<input type = "number" name = "price" placeholder="Price" min="0" maxlength="20">&nbsp;
 					 </td>
 				   </tr>
 				  </table>
