--- a/html/RegistrationWithBean.html
+++ b/html/RegistrationWithBean.html
@@ -4,27 +4,43 @@
 <title>Registration Using Bean</title>
 </head>
 <body>
-Please register to your instructor’s student address book.</font>
+Please register to your instructorâ€™s student address book.</font>
 
 <form method="get" action="/MCS3611/jsp/GetRegistrationData.jsp">
 <p>Last Name <font color="#FF0000">*</font>
-    <input type="text" name="lastName">&nbsp;
+    <input type="text" name="lastName" required maxlength="140">&nbsp;
    First Name <font color="#FF0000">*</font>
-    <input type="text" name="firstName">&nbsp;
+    <input type="text" name="firstName" required maxlength="140">&nbsp;
    MI <input type="text" name="mi" size="3"></p>
-<p>Telephone <input type="text" name="telephone" size="20">&nbsp;
-   Email <input type="text" name="email" size="28">&nbsp;</p>
-<p>Street <input type="text" name="street" size="50"></p>
-<p>City <input type="text" name="city" size="23">&nbsp;
+<p>Telephone <input type="tel" id="phone" name="telephone" size="20" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}">&nbsp;
+   Email <input type="email" name="email" size="28" maxlength="100">&nbsp;</p>
+<p>Street <input type="text" name="street" size="50" maxlength="100"></p>
+<p>City <input type="text" name="city" size="23" maxlength="100">&nbsp;
    State <select size="1" name="state">
           <option value="GA">Michigan-MI</option>
           <option value="OK">Oklahoma-OK</option>
           <option value="IN">Indiana-IN</option>
          </select>&nbsp;
-   Zip <input type="text" name="zip" size="9"></p>
+   Zip <input type="text" name="zip" size="9" maxlength="9"></p>
 <p><input type="submit" name="Submit" value="Submit">
    <input type="reset" value="Reset"></p>
 </form>
 <p><font color="#FF0000">* required fields</font></p>
 </body>
 </html>
+<script>
+	var phone_input = document.getElementById("myform_phone");
+
+	phone_input.addEventListener('input', () => {
+	phone_input.setCustomValidity('');
+	phone_input.checkValidity();
+	});
+
+	phone_input.addEventListener('invalid', () => {
+	if(phone_input.value === '') {
+	phone_input.setCustomValidity('Enter phone number!');
+	} else {
+	phone_input.setCustomValidity('Enter phone number in this format: 123-456-7890');
+	}
+	});
+</script>
