--- a/html/Selecthome.html
+++ b/html/Selecthome.html
@@ -132,7 +132,7 @@ o\:*         { behavior: url(#default#VML) }
                 <table>
 					<tr>
 					   <td>
-						  <input type = "number" name = "HOMEID" placeholder="Home ID" min="0">&nbsp;
+						  <input type = "number" name = "HOMEID" placeholder="Home ID" min="0" maxlength="40">&nbsp;
 					   </td>
 					 </tr>
 					</table>
