--- a/html/homesForSale.html
+++ b/html/homesForSale.html
@@ -124,7 +124,7 @@ o\:*         { behavior: url(#default#VML) }
 				<table>
 					<tr>
 						<td>
-							<input type="text" name="CITY" placeholder="City Name">&nbsp;
+							<input type="text" name="CITY" placeholder="City Name" maxlength="100">&nbsp;
 						</td>
 					</tr>
 				</table>
