--- a/html/update.html
+++ b/html/update.html
@@ -130,12 +130,12 @@ o\:*         { behavior: url(#default#VML) }
 			<table>
 				<tr>
 				   <td>
-					  <input type = "text" name = "lastName" placeholder="Last Name *">&nbsp;
+					  <input type = "text" name = "lastName" placeholder="Last Name *" required maxlength="140">&nbsp;
 				   </td>
 				 </tr>
 				 <tr>
 					<td>
-					   <input type = "text" name = "firstName" placeholder="First Name *">&nbsp;
+					   <input type = "text" name = "firstName" placeholder="First Name *" required maxlength="140">&nbsp;
 					</td>
 				  </tr>
 				</table>
