--- a/html/AddOwner.html
+++ b/html/AddOwner.html
@@ -129,7 +129,7 @@ o\:*         { behavior: url(#default#VML) }
 				<table>
 					<tr>
 						<td>
-							<input type="number" name="SSN" placeholder="SSN *" min="0" maxlength="9" required>&nbsp;
+							<input type="number" name="SSN" placeholder="SSN *" min="0" max="999999999" required>&nbsp;
 						</td>
 					</tr>
 					<tr>
