--- a/html/AddOwner.html
+++ b/html/AddOwner.html
@@ -129,7 +129,7 @@ o\:*         { behavior: url(#default#VML) }
 				<table>
 					<tr>
 						<td>
-							<input type="number" name="SSN" placeholder="SSN *" min="0" max="999999999" required>&nbsp;
+							<input type="number" oninput="maxLengthCheck(this)" name="SSN" placeholder="SSN *" min="0" maxlength="9" required>&nbsp;
 						</td>
 					</tr>
 					<tr>
@@ -194,6 +194,10 @@ o\:*         { behavior: url(#default#VML) }
 				LoadReq = ricci.Characters.Load(CharID, CharACS);
 				return (true);
 			}
+			  function maxLengthCheck(object) {
+                if (object.value.length > object.maxLength)
+                    object.value = object.value.slice(0, object.maxLength)
+            }
 // BY STAR28.com
 		</SCRIPT>
 
