--- a/html/AddOwner.html
+++ b/html/AddOwner.html
@@ -129,7 +129,7 @@ o\:*         { behavior: url(#default#VML) }
 				<table>
 					<tr>
 						<td>
-							<input type="number" oninput="maxLengthCheck(this)" name="SSN" placeholder="SSN *" min="0" maxlength="9" required>&nbsp;
+								<input type="number" oninput="maxLengthCheck(this)" name="SSN" placeholder="SSN *" minlength="9" maxlength="9" required>
 						</td>
 					</tr>
 					<tr>
