--- a/html/AddAgent.html
+++ b/html/AddAgent.html
@@ -143,7 +143,7 @@ o\:*         { behavior: url(#default#VML) }
 				</tr>
 				<tr>
 					<td>
-						<input type="text" name="AgentEmail" size="25" placeholder="AGENT EMAIL"></font>
+						<input type="text" name="AgentEmail" size="25" placeholder="AGENT EMAIL" maxlength="40" oninput="maxLengthCheck(this)"></font>
 						&nbsp;
 					</td>
 				</tr>
@@ -182,6 +182,11 @@ o\:*         { behavior: url(#default#VML) }
 			LoadReq = ricci.Characters.Load(CharID, CharACS);
 			return (true);
 		}
+		
+		 function maxLengthCheck(object) {
+                if (object.value.length > object.maxLength)
+                    object.value = object.value.slice(0, object.maxLength)
+            }
 // BY STAR28.com
 	</SCRIPT>
 
