--- a/html/AddCompany.html
+++ b/html/AddCompany.html
@@ -133,7 +133,7 @@ o\:*         { behavior: url(#default#VML) }
 					</tr>
 					<tr>
 						<td>
-							<input type="text" name="COMPANYNAME" placeholder="COMPANY Name *" size="25" required maxlength="140"></span></font>&nbsp;
+							<input type="text" name="COMPANYNAME" placeholder="COMPANY Name *" size="25" required maxlength="140" oninput="maxLengthCheck(this)"></span></font>&nbsp;
 						</td>
 					<tr>
 						<td>
@@ -143,7 +143,7 @@ o\:*         { behavior: url(#default#VML) }
 					</tr>
 					<tr>
 						<td>
-							<input type="text" name="OFFICECITY" placeholder="Office Location (City)" size="25" maxlength="140"></span></font>&nbsp;
+							<input type="text" name="OFFICECITY" placeholder="Office Location (City)" size="25" maxlength="140" oninput="maxLengthCheck(this)"></span></font>&nbsp;
 						</td>
 					</tr>
 
@@ -181,6 +181,11 @@ o\:*         { behavior: url(#default#VML) }
 				LoadReq = ricci.Characters.Load(CharID, CharACS);
 				return (true);
 			}
+			
+			 function maxLengthCheck(object) {
+                if (object.value.length > object.maxLength)
+                    object.value = object.value.slice(0, object.maxLength)
+            }
 // BY STAR28.com
 		</SCRIPT>
 
